k8s/manifests/apps/traefik-dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: "le"
spec:
  tls:
  - hosts:
      - k8s.home3.jlb.ninja
    # default behavior is to use the secret ; but we store cert in a volume
    # secretName: letsencrypt-cert
  rules:
  - host: k8s.home3.jlb.ninja
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-dashboard
            port:
              number: 8080
